<resources>
    <string name="app_name">CyteLogin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="games_company">Games Company</string>
    <string name="programmer">Programmer</string>
    <string name="know_how_to_program_games">- Know how to program games</string>
    <string name="be_experienced_with_android_studio">- Be experienced with Android Studio</string>
    <string name="continue_to_assessment">continue to assessment</string>
    <string name="company_name">Company Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cyte">CYTE</string>
    <string name="postal_address">Postal Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="employer">employer</string>
    <string name="candidate">candidate</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="employer2">Employer2</string>
    <string name="candidate2">Candidate2</string>
    <string name="cyte2">CYTE2</string>
    <string name="todo1">TODO</string>
    <string name="links">Links to educational organizations</string>
    <string name="go_to_profile">Back to profile</string>
    <string name="search">Search</string>
    <string name="selectTitle">jobTitle</string>
    <string name="nextQue">Next Question</string>
    <string name="todo">TODO</string>
    <string name="programmer_assessment">Programmer Assessment</string>
    <string name="assessment_thanks">Thank you for completing this assessment. You may be contacted within the next 8 business days by an employer for an interview.</string>
    <string name="assessment">Assessment</string>
    <string name="results">Results</string>
    <string name="submit">Submit</string>
    <string name="CheckBox_1">Calculation -Using basic arithmetic skills including adding, subtracting, multiplication and division</string>
    <string name="CheckBox_2">Public Speaking- addressing or delivering a speech to a group or audience.</string>
    <string name="CheckBox_3">Problem solving - defining a problem, seeking alternatives, selecting a solution.</string>
    <string name="Button_T1">Continue</string>
    <string name="tV_1">Select Maximum 6 Skills That Apply To You</string>
    <string name="cb1_android">Calculation -Using basic arithmetic skills including adding, subtracting, multiplication and division</string>
    <string name="cb2_android">Public Speaking- addressing or delivering a speech to a group or audience.</string>
    <string name="check_Calculation">Calculation -Using basic arithmetic skills including adding, subtracting, multiplication and division.</string>
    <string name="resulttextview">Mental Skills Test</string>
    <string name="check_public">Public Speaking- addressing or delivering a speech to a group or audience.</string>
    <string name="check_Problem">Problem solving - defining a problem, seeking alternatives, selecting a solution.</string>
    <string name="check_Assessing">Assessing - correctly determining the nature of a situation or issue.</string>
    <string name="check_Classifying">Classifying - using and adapting a complex organization system for the storage and efficient retrieval of information.</string>
    <string name="check_Technological">Technological - understanding and performing basic computer tasks and logical technology skills.</string>
    <string name="check_Quality">Assessing quality - correctly determining the worth of the work you are performing.</string>
    <string name="check_Displaying">Designing/displaying - organizing spaces, products, objects, colours or images creatively.</string>
    <string name="check_Elaboration">Elaboration: Connecting new ideas to what you already know.</string>
    <string name="check_Analytical">Analytical skills. Identifying a problem and coming up with a technological solution to address it.</string>
    <string name="select_skills_button">Select Skills</string>
    <string name="mentaltestdescription">Click the 6 skills that apply to you</string>
    <string name="backtoposts">Back to job posts</string>
</resources>

