<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".skill_Test"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/resulttextview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Calculation"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_public"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Problem"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Assessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Assessing"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Classifying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Classifying"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Technological"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Technological"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Quality"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Displaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Displaying"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_Elaboration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Elaboration"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/check_Analytical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Analytical"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_Select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/select_skills_button"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/results" />

    <Button
        android:id="@+id/button4"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold" />


</LinearLayout>