<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/cytebackgroun"
    >


    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/games_company"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="8dp"
        android:text="@string/programmer"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobInfo"
        android:layout_width="353dp"
        android:layout_height="72dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/rounded_border"
        android:text="@string/be_experienced_with_android_studio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobInfo2"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_border"
        android:text="@string/know_how_to_program_games"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/jobInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/assessmentButton"
        android:layout_width="212dp"
        android:layout_height="55dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/semitransparentbackground"
        android:text="@string/continue_to_assessment"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobInfo2" />

    <ImageView
        android:id="@+id/samplelogo"
        android:layout_width="138dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/semitransparentbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamelogo" />


</android.support.constraint.ConstraintLayout>